--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "bundle-buddy-webpack-plugin": "^0.3.0",
@@ -57,7 +58,10 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "big-number": "^1.0.0",
     "bootstrap": "^4.0.0",
+    "css-hot-loader": "^1.4.2",
+    "fsevents": "^1.2.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "prop-types": "^15.6.0",
@@ -67,6 +71,11 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.82.5",
+    "truffle-contract": "^3.0.6",
+    "truffle-hdwallet-provider": "0.0.5",
+    "web3": "^1.0.0-beta.36"
   }
 }
